# hello-axum

./: Makefile.toml  readme.md
client/: Cargo.toml  Makefile.toml
k8s/: deploy  kustomization.yaml  server.yaml
server/: Cargo.toml  Dockerfile  Makefile.toml
server/src/: main.rs
