[package]
name = "client"
version = "0.1.0"
edition = "2021"


rust-version = "1.83"
license = "MIT or Apache-2.0"
description = "Multi-AI Providers Library for Rust. (Anthropic, OpenAI, Gemini, xAI, Ollama, Groq, ...)"
keywords = ["generative-ai","openai","chatgpt","gemini","ollama"]
homepage = "https://github.com/jeremychone/rust-genai"
repository = "https://github.com/jeremychone/rust-genai"

[dependencies]
