[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
http-body-util = "0.1.2"
hyper-util = { version = "0.1.10", features = ["client", "http1", "client-legacy"] }
mime = "0.3"
serde = "1.0.217"
serde_json = "1.0.134"
tokio = { version = "1.42.0", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }

[dev-dependencies]
tower = { version = "0.5.2", features = ["util"] }
